package sample.model.node;


public enum NodeType {
    ROAD,CONNECTOR,SPAWN,LIGHTS
}
